# Sql_Agent

./: Student.db  app.py  pyproject.toml  reqirements.txt  sqlite3_ingestion.py
