[project]
name = "sql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.5.5",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-groq>=0.3.8",
    "mysql-connector-python>=9.4.0",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
]
